# PlaneBoardingSim

./: .gitignore  CMakeLists.txt  Globals.h  Person.cpp  Person.h  README.md  Sim.cpp  Sim.h  init_types.cpp  init_types.h  main.cpp
Scenarios/: config.ini  default.ini
Sim/: CMakeLists.txt
Sim/include/: BoardingTypes.h  Globals.h  InputArguments.h  Person.h  Sim.h  init_types.h
Sim/src/: BoardingTypes.cpp  InputArguments.cpp  Person.cpp  Sim.cpp  init_types.cpp
Testing/: UnitTests.cpp
Tools/: pathMapping.py  visualizer.py
tools/: pathMapping.py  visualizer.py
